# sprite_editor

./: COPYRIGHT  Cargo.toml  README.md  renderdoc.cap
src/: main.rs  sprite.frag
src/common/: mod.rs
src/common/input/: systems.rs
src/common/map/: systems.rs
src/common/sprite_batch_experiment/: mod.rs
src/data/: assets.rs  mod.rs  resources.rs  shared_components.rs  systems.rs  tile_entity.rs  tileset_entity.rs
src/systems/: initializing.rs  mod.rs  tileset_editing.rs
src/systems/tileset_editing/: editing_tools.rs  mod.rs  updating_data.rs
src/systems/tileset_editing/tools/: brush.rs  mod.rs
src/ui/: bevy_egui.rs  bevy_ui.rs  mod.rs
