[package]
name = "sprite_editor"
version = "0.1.0"
authors = ["TheLeonsver1 <sverdleon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"
bevy_tilemap = "0.4"
enum_index = "0.2.0"
enum_index_derive = "0.2.0"
bevy_egui = "0.4"
image = "0.23.14"
bevy_prototype_lyon = "0.3.0"
bevy_common = {path = "bevy_common"}
[profile.dev.package."*"]
opt-level = 3
