[package]
name = "sprite_editor"
version = "0.1.0"
authors = ["TheLeonsver1 <sverdleon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5", default-features = false, features = ["bevy_winit", "render", "png"] }
bevy_egui = "0.4"
serde = "1.0.125"
bevy_prototype_lyon = "0.3.0"
bevy_common = {path = "bevy_common"}
[profile.dev.package."*"]
opt-level = 3
